--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.session.jdbc.initialize-schema=always
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=stuLogin.html
